# tin_man

./: Cargo.toml  README.md
benches/: wisard_bench.rs
examples/: clus_demo.rs  demo.rs  demo_iris.rs  encoding.rs  tin_man_mapping.py  tin_man_mental_image.py  tin_man_visualize.py  write_demo.rs
src/: clus_regression_wisard.rs  clus_wisard.rs  discriminator.rs  encoders.rs  lib.rs  persist.rs  ram.rs  regression_discriminator.rs  regression_wisard.rs  wisard.rs
tests/: clus_wisard_tests.rs  regression_wisard_tests.rs  wisard_tests.rs
tin_man_py/: Cargo.toml  README.md  model.json
tin_man_py/src/: lib.rs
