[package]
name = "tin_man"
version = "0.1.0"
edition = "2021"
description = "A Rust library for WiSARD-family weightless neural networks: WiSARD, ClusWiSARD, and Regression WiSARD."
license = "MIT"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"